Ada Perubahan pada Section 1. Penambahan tentang penjelasan dari Smart Lamp dengan Pir Motion Sensor

--- a/src/styles/base.styl
+++ b/src/styles/base.styl
@@ -11,6 +11,12 @@ p, li
 
 p
   margin 0 0 1rem 0
+  font-size 14px
+  text-align justify
+
+h1
+  color red
+  text-align center
 
 ul, ol
   padding 0 0 0 20px
